# mobile_llm

./: .gitignore  README.md
app/: CMakeCache.txt  Makefile  cmake_install.cmake  pubspec.yaml
app/android/app/: CMakeLists.txt  build.gradle.kts
app/ios/Classes/: llama_bridge.cpp  llama_bridge.h  native_add.cpp
app/ios/Classes/llama.xcframework/: Info.plist
app/ios/Classes/llama.xcframework/ios-arm64/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
app/ios/Classes/llama.xcframework/ios-arm64/llama.framework/: llama
app/ios/Classes/llama.xcframework/ios-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
app/ios/Classes/llama.xcframework/ios-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/x86_64/: llama.yml
app/ios/Classes/llama.xcframework/macos-arm64_x86_64/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
app/ios/Classes/llama.xcframework/macos-arm64_x86_64/dSYMs/llama.dSYM/Contents/Resources/Relocations/x86_64/: llama.yml
app/ios/Classes/llama.xcframework/tvos-arm64/llama.framework/: llama
app/ios/Classes/llama.xcframework/xros-arm64/llama.framework/: llama
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: chat_box.dart  debug_box.dart  debug_page.dart  knowledge_box.dart  llm.dart  llm_worker.dart  main.dart  objectbox-model.json  objectbox.g.dart  objectbox_service.dart
app/lib/entity/: chat.dart  debug.dart  knowledge.dart
app/lib/natives/: llama.dart  native_add.dart
cli/: pubspec.yaml
notes/: ffi_intro.md  llama_ios.md
(+6 files in other folders)
